crates/elenchus-solver/tests/snapshots/output_variants__believes_a_falsehood_is_a_false_belief.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(\"NOT door locked\\nBELIEVES bob door locked\\n\")"
---
RESULT: WARNING
  BELIEF    bob believes d.door locked — but it is FALSE (a false belief)   [v.vrf:3]
SUMMARY: 0 conflicts, 0 underdetermined, 0 warnings, 0 derived, 1 false beliefs
EXIT_CODE: 1
