crates/elenchus-solver/tests/snapshots/output_variants__conflict_assume_vs_fact_retract.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(\"FACT x a\\nASSUME NOT x a\\nCHECK x\\n\")"
---
RESULT: CONFLICT
  RETRACT  your FACTs and PREMISEs are fine.
      But these ASSUME guesses cannot all be true together.
      Remove ONE of them, then check again:
      ASSUME NOT d.x a   [v.vrf:3]
        or flip it to: d.x a   (checked)
  ORPHAN    FACT d.x a — not used by any premise or rule (no effect on the result)
  ORPHAN    ASSUME NOT d.x a — not used by any premise or rule (no effect on the result)
SUMMARY: 1 conflicts, 0 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 2
