crates/elenchus-solver/tests/snapshots/output_variants__conflict_assumptions_retract.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(r#\"\n        FACT rel reviewed\n        PREMISE prod_needs_safety:\n            WHEN rel in_prod\n            THEN rel has_rollback\n            OR   rel has_feature_flag\n        ASSUME rel in_prod\n        ASSUME NOT rel has_rollback\n        ASSUME NOT rel has_feature_flag\n        CHECK rel\n        \"#)"
---
RESULT: CONFLICT
  RETRACT  your FACTs and PREMISEs are fine.
      But these ASSUME guesses cannot all be true together.
      Remove ONE of them, then check again:
      ASSUME d.rel in_prod   [v.vrf:8]
        or flip it to: NOT d.rel in_prod   (checked)
      ASSUME NOT d.rel has_rollback   [v.vrf:9]
        or flip it to: d.rel has_rollback   (checked)
      ASSUME NOT d.rel has_feature_flag   [v.vrf:10]
        or flip it to: d.rel has_feature_flag   (checked)
  ORPHAN    FACT d.rel reviewed — not used by any premise or rule (no effect on the result)
SUMMARY: 1 conflicts, 0 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 2
