crates/elenchus-solver/tests/snapshots/output_variants__conflict_exclusive_violation.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(r#\"\n        FACT x a\n        FACT x b\n        PREMISE e:\n            EXCLUSIVE\n                x a\n                x b\n        CHECK x\n        \"#)"
---
RESULT: CONFLICT
  CONFLICT  e (EXCLUSIVE)  [v.vrf:4]
      x a
      x b
      why:
        x a = TRUE   [FACT v.vrf:2]
        x b = TRUE   [FACT v.vrf:3]
SUMMARY: 1 conflicts, 0 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 2
