crates/elenchus-solver/tests/snapshots/output_variants__conflict_fact_contradiction.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(\"FACT x a\\nNOT x a\\nCHECK x\\n\")"
---
RESULT: CONFLICT
  CONFLICT  - (FACT)  [v.vrf:1]
      x a (asserted both TRUE and FALSE)
  ORPHAN    FACT x a — not used by any premise or rule (no effect on the result)
  ORPHAN    NOT x a — not used by any premise or rule (no effect on the result)
SUMMARY: 1 conflicts, 0 underdetermined, 0 warnings, 0 derived
EXIT_CODE: 2
