crates/elenchus-solver/tests/snapshots/output_variants__conflict_system_unsatisfiable.snap
---
source: crates/elenchus-solver/tests/output_variants.rs
expression: "report(r#\"\n        PREMISE a_implies_b:\n            WHEN x a\n            THEN x b\n        PREMISE a_implies_not_b:\n            WHEN x a\n            THEN NOT x b\n        PREMISE atleast_a_c:\n            ATLEAST\n                x a\n                x c\n        PREMISE c_implies_a:\n            WHEN x c\n            THEN x a\n        CHECK x BIDIRECTIONAL\n        \"#)"
---
RESULT: CONFLICT
  CONFLICT  - (UNSAT)  [<system>:0]
      the premises and facts are jointly unsatisfiable
  CORE  these 4 cannot all hold — drop ONE, then check again:
        a_implies_b (PREMISE)  [v.vrf:3]
        a_implies_not_b (PREMISE)  [v.vrf:6]
        atleast_a_c (ATLEAST)  [v.vrf:9]
        c_implies_a (PREMISE)  [v.vrf:13]
  WARNING   a_implies_b (PREMISE)  [v.vrf:3]
      blocked by: d.x a, d.x b
      fix: nothing determines `d.x a` — add `FACT d.x a` (or `NOT …`), or if a PREMISE's THEN is meant to establish it, make that PREMISE a RULE so it derives the value
  WARNING   a_implies_not_b (PREMISE)  [v.vrf:6]
      blocked by: d.x a, d.x b
  WARNING   c_implies_a (PREMISE)  [v.vrf:13]
      blocked by: d.x c, d.x a
      fix: nothing determines `d.x c` — add `FACT d.x c` (or `NOT …`), or if a PREMISE's THEN is meant to establish it, make that PREMISE a RULE so it derives the value
SUMMARY: 1 conflicts, 0 underdetermined, 3 warnings, 0 derived
EXIT_CODE: 2
